# windwave-editor

./: .gitignore  CODE_WIKI.md  CONTEXT-MAP.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/: agent
crates/agent-core/: CONTEXT.md  Cargo.toml
crates/agent-core/src/: agent.rs  agent_comm.rs  agent_context.rs  agent_pipeline.rs  agent_platform.rs  asset_import.rs  audit.rs  bench.rs  bevy_editor_model.rs  builtin_skills.rs  capture_pipeline.rs  cli_agent.rs  code_graph.rs  code_tools.rs  command.rs  config.rs  context.rs  context_collector.rs  dynamic_planner.rs  edit_history.rs  edit_ops.rs  engine_adapter.rs  engine_tools.rs  event.rs  event_stream.rs  fallback.rs  file_tools.rs  game_skill.rs  git_tracker.rs  goal.rs  goal_checker.rs  godot_adapter.rs  hr_agent.rs  hybrid_controller.rs  index.rs  layered_context_builder.rs  lib.rs  lifecycle.rs  llm.rs  mcp_registry.rs  (+47 more)
crates/agent-core/src/director/: agent_dispatch.rs  events.rs  execution.rs  goals.rs  mod.rs  plan_executor.rs  plan_manager.rs  plan_revision.rs  plans.rs  react_executor.rs  react_runner.rs  react_tools.rs  types.rs
crates/agent-core/src/game_mode/: mod.rs  mode_manager.rs  mode_types.rs
crates/agent-core/src/memory/: episodic.rs  lifecycle.rs  mod.rs  preferences.rs  procedural.rs  retrieval.rs  semantic.rs  system.rs  working.rs
crates/agent-core/src/memory_injector/: code_index.rs  compressor.rs  event_bridge.rs  injector.rs  mod.rs  pattern_learner.rs  project_memory.rs  working_set.rs
crates/agent-core/src/narrative/: mod.rs
crates/agent-core/src/narrative_agents/: mod.rs
crates/agent-core/src/planner/: llm_planner.rs  mod.rs  rule_based.rs
crates/agent-ui/: CONTEXT.md  Cargo.toml
crates/agent-ui/src/: agent_config_panel.rs  asset_browser.rs  console_panel.rs  debug_panel.rs  diff_preview.rs  director_desk.rs  editor_selection.rs  gizmo.rs  hierarchy_panel.rs  history_panel.rs  inspector_panel.rs  layout.rs  lib.rs  memory_persistence.rs  permission_panel.rs  play_mode.rs  prefab_browser.rs  project_panel.rs  runtime_agent_panel.rs  shortcuts.rs  transform_tools.rs  viewport_picking.rs  visual_understanding.rs
crates/agent-ui/src/narrative_ui/: game_mode_panel.rs  mod.rs
crates/bevy-adapter/: CONTEXT.md  Cargo.toml
crates/bevy-adapter/src/: command_processor.rs  integration.rs  lib.rs  llm_runtime_agent.rs  perception.rs  prefab_ops.rs  runtime_agent.rs  scene_bridge_impl.rs  scene_index.rs  scene_io.rs  screenshot.rs  state_machine.rs  utility_ai.rs
crates/bevy-adapter/src/adapter/: commands.rs  mod.rs  rollback.rs  scene_build.rs
src/: main.rs  resources.rs
templates/: platformer_cargo.toml  platformer_main.rs  platformer_player.rs  rpg_main.rs  rpg_map.rs
