[package]
name = "agent-edit"
version = "0.1.0"
edition = "2021"
authors = ["AgentEdit Team"]
description = "AI Agent Driven Game Editor"

[[bin]]
name = "agent-edit"
path = "src/main.rs"

[dependencies]
agent-core = { path = "crates/agent-core" }
agent-ui = { path = "crates/agent-ui" }
bevy-adapter = { path = "crates/bevy-adapter" }

bevy = { version = "0.17", default-features = false, features = [
    "bevy_log",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
] }
bevy_egui = "0.38"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/agent-ui",
    "crates/bevy-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
