[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
description = "Agent interface layer - core types and context management"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["time", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
regex = "1.10"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
log = { workspace = true }
walkdir = "2.5"
once_cell = "1.19"
dirs = "5.0"

[features]
default = ["llm-openai", "llm-claude", "engine-http"]
llm-openai = ["reqwest"]
llm-claude = ["reqwest"]
engine-http = ["reqwest"]

[dev-dependencies]
serde_json = "1.0"
