[package]
name = "bevy-adapter"
version.workspace = true
edition.workspace = true
description = "Bevy engine adapter for AgentEdit"

[dependencies]
agent-core = { path = "../agent-core" }
bevy = { workspace = true, features = ["bevy_sprite", "bevy_render", "bevy_winit"] }
async-trait = "0.1"
log = "0.4"
serde = { workspace = true }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"
tokio = { version = "1", features = ["sync", "rt"] }
